<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    android:padding="10dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/notification_layout_image_profile"
        android:layout_width="100dp"
        android:layout_height="115dp"
        android:contentDescription="@string/notification_profile_img"
        android:src="@drawable/ic_person_profile_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/notification_layout_image_profile"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_layout_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rokkitt_regular"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notification_layout_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rokkitt_regular"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/notification_layout_accept_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1085E0"
                android:text="@string/accept"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/notification_layout_decline_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="#E7E5E5"
                android:text="@string/decline"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
