<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="@color/white"
    tools:context=".Settings">


    <TextView
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_collections_grey_24dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/fragment_settings_change_chat_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/change_chat_background"
        android:fontFamily="@font/rokkitt_regular"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:background="#F1F1F1"
        android:textAllCaps="true"/>

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F1F1F1">

    <TextView
        android:layout_centerVertical="true"
        android:id="@+id/fragment_settings_mute_notifications_text"
        android:drawableStart="@drawable/ic_notifications_off_blue_24dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mute_notifications"
        android:textAlignment="textStart"
        android:fontFamily="@font/rokkitt_regular"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:background="@android:color/transparent"
        android:textAllCaps="true"/>

        <Switch
            android:id="@+id/fragment_settings_mute_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>

    <TextView
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_backspace_red_24dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/fragment_settings_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:fontFamily="@font/rokkitt_regular"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:background="#F1F1F1"
        android:textAllCaps="true"/>

</LinearLayout>