<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GroupChatSettings"
    tools:showIn="@layout/activity_group_chat_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rokkitt_regular"
            android:text="@string/group_members"
            android:textColor="@color/cyan"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/activity_group_settings_img_btn_add_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_member"
            android:src="@drawable/ic_person_add_blue_24dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/activity_group_settings_users_list_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_group_settings_users_recycler_lists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_group_settings_leave_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cyan"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/activity_group_settings_leave_group_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_pan_tool_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="@font/rokkitt_regular"
                        android:text="@string/leave_group"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!--<androidx.cardview.widget.CardView
                android:id="@+id/activity_group_settings_clear_chats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/cyan"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/activity_group_settings_clear_chats_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_clear_all_red_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="@font/rokkitt_regular"
                        android:text="@string/clear_chats"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>-->
    </LinearLayout>
</androidx.core.widget.NestedScrollView>