<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.AppBarLayout"
        android:id="@+id/chatsToolbarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <ImageButton
                android:layout_marginStart="10dp"
                android:id="@+id/activity_chat_back_btn"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/activity_chat_back_btn"
                android:id="@+id/activity_chat_user_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_person_profile_24dp"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/activity_chat_user_img"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/activity_chat_progress_file_upload"
            android:layout_marginStart="10dp">
            <TextView
                android:transitionName="username"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:id="@+id/activity_chat_text_username"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:text="Username"
                tools:targetApi="lollipop" />

            <TextView
                android:alpha="0.7"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/rokkitt_regular"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:id="@+id/activity_chat_text_time"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:text="active 19 mintess ago" />
        </LinearLayout>
            <ProgressBar
                android:visibility="invisible"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toStartOf="@id/activity_chat_menu_options"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:theme="@style/BarTheme"
                android:id="@+id/activity_chat_progress_file_upload"/>

            <ImageButton
                android:background="@android:color/transparent"
                android:src="@drawable/ic_more_vert_white_24dp"
                android:visibility="visible"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:theme="@style/BarTheme"
                android:id="@+id/activity_chat_menu_options"/>
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_below="@+id/chatsToolbarLayout"
        android:id="@+id/activity_chat_img_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_below="@+id/chatsToolbarLayout"
        android:id="@+id/activity_chat_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_chat_bottom_view_line"
        android:padding="10dp">
        <RelativeLayout
            android:layout_above="@+id/activity_chat_bottom_view_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_chat_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-1dp" />
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <View
        android:id="@+id/activity_chat_bottom_view_line"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_above="@+id/activity_chat_bottom"
        android:background="#ACA9A9" />

    <LinearLayout
        android:layout_alignParentEnd="true"
        android:elevation="10dp"
        android:id="@+id/activity_chat_card_choose_file_layout"
        android:visibility="gone"
        android:layout_marginBottom="5dp"
        android:padding="15dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/pick_chat_files_card_layout"
        android:layout_below="@+id/chatsToolbarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageButton
                android:id="@+id/activity_chat_image_camera_pick"
                android:src="@drawable/ic_camera_white_24dp"
                android:background="@drawable/round_circle_green"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rokkitt_regular"
                    android:text="@string/camera"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/activity_chat_document_file_pick"
                    android:src="@drawable/ic_insert_drive_file_white_24dp"
                    android:background="@drawable/round_circle_blue"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rokkitt_regular"
                    android:text="Document"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/activity_chat_contact_file_pick"
                    android:src="@drawable/ic_perm_contact_calendar_white_24dp"
                    android:background="@drawable/round_circle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rokkitt_regular"
                    android:text="@string/contacts"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/activity_chat_video_file_pick"
                    android:src="@drawable/ic_videocam_white_24dp"
                    android:background="@drawable/round_circle_purple"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rokkitt_regular"
                    android:text="@string/video"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/activity_chat_image_file_pick"
                    android:src="@drawable/ic_collections_white_24dp"
                    android:background="@drawable/round_circle_cyan"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rokkitt_regular"
                    android:text="@string/images"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/activity_chat_audio_file_pick"
                    android:src="@drawable/ic_keyboard_voice_white_24dp"
                    android:background="@drawable/round_circle_yellow"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rokkitt_regular"
                    android:text="@string/audio"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/activity_chat_bottom"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:maxHeight="150dp"
            android:inputType="textMultiLine"
            android:layout_marginEnd="10dp"
            android:id="@+id/activity_chat_edit_text"
            android:textSize="15sp"
            android:hint="Type a message"
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="wrap_content"
            android:background="@drawable/white_back_50_radius"
            android:padding="15dp" />

        <ImageButton
            android:layout_marginEnd="10dp"
            android:rotation="45"
            android:id="@+id/activity_chat_img_attach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_attach_file_black_24dp"
            android:padding="10dp"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:src="@drawable/ic_keyboard_voice_white_24dp"
            android:id="@+id/activity_chat_btn_send"
            android:background="@drawable/round_circle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="#ffffff" />

    </LinearLayout>
</RelativeLayout>